// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly in mobile no elements 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        id="delete"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Delete
        </button>
      </div>
      <div
        id="duplicate"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Duplicate
        </button>
      </div>
      <div
        id="parameter"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Parameters
        </button>
      </div>
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div
      class="tools"
    >
      <div>
        This is dummy ObjectPanelDivider
      </div>
      <div
        id="group"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Group
        </button>
      </div>
      <div
        id="ungroup"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Ungroup
        </button>
      </div>
      <div
        id="align"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Top Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Middle Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Bottom Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Left Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Center Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Right Align
          </button>
        </div>
      </div>
      <div
        id="distribute"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Horizontal Distribute
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Vertical Distribute
          </button>
        </div>
      </div>
      <div
        id="boolean"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Union
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Subtract
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Intersect
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Difference
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile one element is g element 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        id="delete"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Delete
        </button>
      </div>
      <div
        id="duplicate"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Duplicate
        </button>
      </div>
      <div
        id="parameter"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Parameters
        </button>
      </div>
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div
      class="tools"
    >
      <div>
        This is dummy ObjectPanelDivider
      </div>
      <div
        id="group"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Group
        </button>
      </div>
      <div
        id="ungroup"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Ungroup
        </button>
      </div>
      <div
        id="align"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Top Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Middle Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Bottom Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Left Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Center Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Right Align
          </button>
        </div>
      </div>
      <div
        id="distribute"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Horizontal Distribute
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Vertical Distribute
          </button>
        </div>
      </div>
      <div
        id="boolean"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Union
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Subtract
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Intersect
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Difference
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile one element not g element 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        id="delete"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Delete
        </button>
      </div>
      <div
        id="duplicate"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Duplicate
        </button>
      </div>
      <div
        id="parameter"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Parameters
        </button>
      </div>
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div
      class="tools"
    >
      <div>
        This is dummy ObjectPanelDivider
      </div>
      <div
        id="group"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Group
        </button>
      </div>
      <div
        id="ungroup"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Ungroup
        </button>
      </div>
      <div
        id="align"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Top Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Middle Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Bottom Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Left Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Center Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Right Align
          </button>
        </div>
      </div>
      <div
        id="distribute"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Horizontal Distribute
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Vertical Distribute
          </button>
        </div>
      </div>
      <div
        id="boolean"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Union
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Subtract
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Intersect
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Difference
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile two elements contains other types of elements 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        id="delete"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Delete
        </button>
      </div>
      <div
        id="duplicate"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Duplicate
        </button>
      </div>
      <div
        id="parameter"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Parameters
        </button>
      </div>
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div
      class="tools"
    >
      <div>
        This is dummy ObjectPanelDivider
      </div>
      <div
        id="group"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Group
        </button>
      </div>
      <div
        id="ungroup"
      >
        This is dummy ObjectPanelItem
        <button
          type="button"
        >
          Ungroup
        </button>
      </div>
      <div
        id="align"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Top Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Middle Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Bottom Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Left Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Center Align
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Right Align
          </button>
        </div>
      </div>
      <div
        id="distribute"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Horizontal Distribute
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Vertical Distribute
          </button>
        </div>
      </div>
      <div
        id="boolean"
      >
        This is dummy ObjectPanelActionList
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Union
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Subtract
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Intersect
          </button>
        </div>
        <div>
          <svgr-url />
          <button
            type="button"
          >
            Difference
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly in mobile two elements contains rect, polygon or ellipse elements 1`] = `
<Memo(ObjectPanel)>
  <div
    className="container"
    id="object-panel"
  >
    <div
      className="tools"
    >
      <DummyObjectPanelItem
        content={<svgr-url />}
        id="delete"
        label="Delete"
        onClick={[MockFunction]}
      >
        <div
          id="delete"
        >
          This is dummy ObjectPanelItem
          <button
            onClick={[MockFunction]}
            type="button"
          >
            Delete
          </button>
        </div>
      </DummyObjectPanelItem>
      <DummyObjectPanelItem
        content={<svgr-url />}
        id="duplicate"
        label="Duplicate"
        onClick={[Function]}
      >
        <div
          id="duplicate"
        >
          This is dummy ObjectPanelItem
          <button
            onClick={[Function]}
            type="button"
          >
            Duplicate
          </button>
        </div>
      </DummyObjectPanelItem>
      <DummyObjectPanelItem
        autoClose={false}
        content={<svgr-url />}
        id="parameter"
        label="Parameters"
        onClick={[Function]}
      >
        <div
          id="parameter"
        >
          This is dummy ObjectPanelItem
          <button
            onClick={[Function]}
            type="button"
          >
            Parameters
          </button>
        </div>
      </DummyObjectPanelItem>
    </div>
    <DummyOptionsPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <rect
            id="svg_1"
          />
          <ellipse
            id="svg_2"
          />
        </g>
      }
      polygonSides={5}
      rx={1}
      updateDimensionValues={[MockFunction]}
      updateObjectPanel={[MockFunction]}
    >
      <div>
        This is dummy OptionsPanel
      </div>
    </DummyOptionsPanel>
    <DummyDimensionPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <rect
            id="svg_1"
          />
          <ellipse
            id="svg_2"
          />
        </g>
      }
      getDimensionValues={[MockFunction]}
      updateDimensionValues={[MockFunction]}
    >
      <div>
        This is dummy DimensionPanel
      </div>
    </DummyDimensionPanel>
    <div
      className="tools"
    >
      <DummyObjectPanelDivider>
        <div>
          This is dummy ObjectPanelDivider
        </div>
      </DummyObjectPanelDivider>
      <DummyObjectPanelItem
        content={<svgr-url />}
        disabled={false}
        id="group"
        label="Group"
        onClick={[MockFunction]}
      >
        <div
          id="group"
        >
          This is dummy ObjectPanelItem
          <button
            onClick={[MockFunction]}
            type="button"
          >
            Group
          </button>
        </div>
      </DummyObjectPanelItem>
      <DummyObjectPanelItem
        content={<svgr-url />}
        disabled={true}
        id="ungroup"
        label="Ungroup"
        onClick={[MockFunction]}
      >
        <div
          id="ungroup"
        >
          This is dummy ObjectPanelItem
          <button
            onClick={[MockFunction]}
            type="button"
          >
            Ungroup
          </button>
        </div>
      </DummyObjectPanelItem>
      <DummyObjectPanelActionList
        actions={
          [
            {
              "icon": <svgr-url />,
              "label": "Top Align",
              "onClick": [MockFunction],
            },
            {
              "icon": <svgr-url />,
              "label": "Middle Align",
              "onClick": [MockFunction],
            },
            {
              "icon": <svgr-url />,
              "label": "Bottom Align",
              "onClick": [MockFunction],
            },
            {
              "icon": <svgr-url />,
              "label": "Left Align",
              "onClick": [MockFunction],
            },
            {
              "icon": <svgr-url />,
              "label": "Center Align",
              "onClick": [MockFunction],
            },
            {
              "icon": <svgr-url />,
              "label": "Right Align",
              "onClick": [MockFunction],
            },
          ]
        }
        content={<svgr-url />}
        id="align"
        label="Align"
      >
        <div
          id="align"
        >
          This is dummy ObjectPanelActionList
          <div
            key="Top Align"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Top Align
            </button>
          </div>
          <div
            key="Middle Align"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Middle Align
            </button>
          </div>
          <div
            key="Bottom Align"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Bottom Align
            </button>
          </div>
          <div
            key="Left Align"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Left Align
            </button>
          </div>
          <div
            key="Center Align"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Center Align
            </button>
          </div>
          <div
            key="Right Align"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Right Align
            </button>
          </div>
        </div>
      </DummyObjectPanelActionList>
      <DummyObjectPanelActionList
        actions={
          [
            {
              "icon": <svgr-url />,
              "label": "Horizontal Distribute",
              "onClick": [MockFunction],
            },
            {
              "icon": <svgr-url />,
              "label": "Vertical Distribute",
              "onClick": [MockFunction],
            },
          ]
        }
        content={<svgr-url />}
        disabled={true}
        id="distribute"
        label="Distribute"
      >
        <div
          id="distribute"
        >
          This is dummy ObjectPanelActionList
          <div
            key="Horizontal Distribute"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Horizontal Distribute
            </button>
          </div>
          <div
            key="Vertical Distribute"
          >
            <svgr-url />
            <button
              onClick={[MockFunction]}
              type="button"
            >
              Vertical Distribute
            </button>
          </div>
        </div>
      </DummyObjectPanelActionList>
      <DummyObjectPanelActionList
        actions={
          [
            {
              "disabled": false,
              "icon": <svgr-url />,
              "label": "Union",
              "onClick": [Function],
            },
            {
              "disabled": false,
              "icon": <svgr-url />,
              "label": "Subtract",
              "onClick": [Function],
            },
            {
              "disabled": false,
              "icon": <svgr-url />,
              "label": "Intersect",
              "onClick": [Function],
            },
            {
              "disabled": false,
              "icon": <svgr-url />,
              "label": "Difference",
              "onClick": [Function],
            },
          ]
        }
        content={<svgr-url />}
        disabled={false}
        id="boolean"
        label="Boolean"
      >
        <div
          id="boolean"
        >
          This is dummy ObjectPanelActionList
          <div
            key="Union"
          >
            <svgr-url />
            <button
              onClick={[Function]}
              type="button"
            >
              Union
            </button>
          </div>
          <div
            key="Subtract"
          >
            <svgr-url />
            <button
              onClick={[Function]}
              type="button"
            >
              Subtract
            </button>
          </div>
          <div
            key="Intersect"
          >
            <svgr-url />
            <button
              onClick={[Function]}
              type="button"
            >
              Intersect
            </button>
          </div>
          <div
            key="Difference"
          >
            <svgr-url />
            <button
              onClick={[Function]}
              type="button"
            >
              Difference
            </button>
          </div>
        </div>
      </DummyObjectPanelActionList>
    </div>
    <DummyActionsPanel
      elem={
        <g
          data-tempgroup="true"
          id="svg_3"
        >
          <rect
            id="svg_1"
          />
          <ellipse
            id="svg_2"
          />
        </g>
      }
    >
      <div>
        This is dummy ActionsPanel
      </div>
    </DummyActionsPanel>
  </div>
</Memo(ObjectPanel)>
`;

exports[`should render correctly no elements 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        class="row"
      >
        <div
          class="half left sep"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="hdist"
            title="Horizontal Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="top_align"
            title="Top Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="middle_align"
            title="Middle Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="bottom_align"
            title="Bottom Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="vdist"
            title="Vertical Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="left_align"
            title="Left Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="center_align"
            title="Center Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="right_align"
            title="Right Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="half left"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="group"
            title="Group"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="ungroup"
            title="Ungroup"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="union"
            title="Union"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="subtract"
            title="Subtract"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="intersect"
            title="Intersect"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="difference"
            title="Difference"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
  ,
</div>
`;

exports[`should render correctly one element is g element 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        class="row"
      >
        <div
          class="half left sep"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="hdist"
            title="Horizontal Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="top_align"
            title="Top Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="middle_align"
            title="Middle Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="bottom_align"
            title="Bottom Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="vdist"
            title="Vertical Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="left_align"
            title="Left Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="center_align"
            title="Center Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="right_align"
            title="Right Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="half left"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="group"
            title="Group"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="ungroup"
            title="Ungroup"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="union"
            title="Union"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="subtract"
            title="Subtract"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="intersect"
            title="Intersect"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="difference"
            title="Difference"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly one element not g element 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        class="row"
      >
        <div
          class="half left sep"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="hdist"
            title="Horizontal Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="top_align"
            title="Top Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="middle_align"
            title="Middle Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="bottom_align"
            title="Bottom Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="vdist"
            title="Vertical Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="left_align"
            title="Left Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="center_align"
            title="Center Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="right_align"
            title="Right Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="half left"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="group"
            title="Group"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="ungroup"
            title="Ungroup"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="union"
            title="Union"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="subtract"
            title="Subtract"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="intersect"
            title="Intersect"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="difference"
            title="Difference"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly two elements contains other types of elements 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        class="row"
      >
        <div
          class="half left sep"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="hdist"
            title="Horizontal Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="top_align"
            title="Top Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="middle_align"
            title="Middle Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="bottom_align"
            title="Bottom Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="vdist"
            title="Vertical Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="left_align"
            title="Left Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="center_align"
            title="Center Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="right_align"
            title="Right Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="half left"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="group"
            title="Group"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="ungroup"
            title="Ungroup"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="union"
            title="Union"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="subtract"
            title="Subtract"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="intersect"
            title="Intersect"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="difference"
            title="Difference"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;

exports[`should render correctly two elements contains rect, polygon or ellipse elements 1`] = `
<div>
  <div
    class="container"
    id="object-panel"
  >
    <div
      class="tools"
    >
      <div
        class="row"
      >
        <div
          class="half left sep"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="hdist"
            title="Horizontal Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="top_align"
            title="Top Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="middle_align"
            title="Middle Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="bottom_align"
            title="Bottom Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="vdist"
            title="Vertical Distribute"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="left_align"
            title="Left Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="center_align"
            title="Center Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="right_align"
            title="Right Align"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="half left"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="group"
            title="Group"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            disabled=""
            id="ungroup"
            title="Ungroup"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
        <div
          class="half right"
        >
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="union"
            title="Union"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="subtract"
            title="Subtract"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="intersect"
            title="Intersect"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
          <button
            class="ant-btn css-dev-only-do-not-override-hash ant-btn-text ant-btn-icon-only"
            id="difference"
            title="Difference"
            type="button"
          >
            <span
              class="ant-btn-icon"
            >
              <svgr-url />
            </span>
            
          </button>
        </div>
      </div>
    </div>
    <div>
      This is dummy DimensionPanel
    </div>
    <div>
      This is dummy OptionsPanel
    </div>
    <div>
      This is dummy ActionsPanel
    </div>
  </div>
</div>
`;
